# sdk-python

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
examples/: send_message.py
src/sailhouse/: __init__.py  client.py  exceptions.py
test/: client_test.py
